--- a/app/src/main/res/layout/activity_sample1.xml
+++ b/app/src/main/res/layout/activity_sample1.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="12dp"
-    tools:context=".MainActivity">
+    tools:context=".Sample1Activity">
 
     <ImageButton
         android:id="@+id/imageButton1"
